src/test/ui/issues/issue-17718-constants-not-static.nll.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-17718-constants-not-static.rs:15:31
   |
LL | fn foo() -> &'static usize { &id(FOO) }
   |                               ^^^^^^^ - temporary value is freed at the end of this statement
   |                               |
   |                               creates a temporary which is freed while still in use
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
